--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ pc2020_DE_NUTS-2021_v3.0.zip
 pc2020_DE_NUTS-2021_v3.0.csv
 PLZviaNUTStoAGS.Rproj
 EU-28-LAU-2019-MNUTS-2016.xlsx
+NUTS_2021L_20210611_180433.csv
+NUTS_2021L_20210611_180608_NUTS3-only.csv
